# sarasvati-haskell

./: .project  README  Sarasvati.cabal  compile-and-run-haskell.sh  compile.sh  gen-parser.sh
db/: create-schema.sql
doc/: design.txt  functional-infueunce.txt  todo.txt
examples/: Examples.cabal
lang/: guard.y
src/: ConsoleDatabaseUI.lhs  ConsoleDbMain.hs  ConsoleMain.hs  ConsoleUI.lhs  ConsoleXmlFileUI.lhs  ConsoleXmlMain.hs  LoaderMain.hs  Main.lhs  MonadTransTest.lhs  Task.lhs  TaskXml.lhs  Util.lhs  Workflow.lhs  WorkflowLoad.lhs  WorkflowLoadXml.lhs  WorkflowXml.lhs  XmlUtil.lhs
src/DbTest/: DbTest.lhs
src/Test/: DbTest.lhs  ExceptionTest.lhs  IORefTest.lhs  MonadTransTest.lhs  Test.hs
src/Workflow/: DatabaseLoader.hs  DatabaseWfEngine.hs  Engine.hs  Engine.lhs  EngineTypes.hs  Error.hs  GuardLang.hs  Loader.hs  MemoryLoader.hs  MemoryWfEngine.hs  WfError.hs  Workflow.lhs
src/Workflow/Example/: ConsoleCommon.hs  ConsoleDatabaseUI.hs  ConsoleXmlFileUI.hs  DatabaseLoaderExample.hs  DatabaseWfEngineExample.hs  ExampleCommon.hs  MemoryWfEngineExample.hs  Task.hs
src/Workflow/Loaders/: DatabaseToEngineLoader.hs  LoadError.hs  WfLoad.hs  WorkflowLoad.hs  WorkflowLoad.lhs  WorkflowLoadDB.lhs  WorkflowLoadXml.hs  WorkflowLoadXml.lhs  XmlToDatabaseLoader.hs  XmlToDatabaseLoader.lhs
src/Workflow/Sarasvati/: DatabaseLoader.hs  DatabaseWfEngine.hs  DbUtil.hs  Engine.hs  Error.hs  GuardLang.hs  ListUtil.hs  Loader.hs  MemoryLoader.hs  MemoryWfEngine.hs  TokenUtil.hs  XmlUtil.hs
src/Workflow/Task/: Task.hs  Task.lhs  TaskDB.hs  TaskXml.hs  TaskXml.lhs
src/Workflow/UI/: ConsoleCommon.hs  ConsoleDatabaseUI.hs  ConsoleDatabaseUI.lhs  ConsoleXmlFileUI.hs  ConsoleXmlFileUI.lhs
src/Workflow/Util/: DbUtil.hs  DbUtil.lhs  ListUtil.hs  ListUtil.lhs  TokenUtil.hs  XmlUtil.hs  XmlUtil.lhs
test-wf/: dense.wf.xml  denser.wf.xml  densest.wf.xml  embedded-task-rej.1.wf.xml  embedded-task-rej.wf.xml  embedded-task.1.wf.xml  embedded-task.wf.xml  many-tasks.1.wf.xml  many-tasks.wf.xml  not-random-guard.wf.xml  one-node.1.wf.xml  random-guard.wf.xml  simplest.1.wf.xml  subwf-tasks-rej.1.wf.xml  subwf-tasks-rej.wf.xml  subwf-tasks.1.wf.xml  subwf-tasks.wf.xml  three-deep.1.wf.xml  three-deep.wf.xml  two-deep.1.wf.xml  two-deep.wf.xml  wf.dtd
test-wf-bad/: missing-node-name.wf.xml  simplest-missing-attr.wf
