Name:			Sarasvati
Version:		0.0.1
Cabal-Version:  >= 1.2
License:		LGPL
License-File:	common/LGPLv3.license
Author:			Paul Lorenz
Homepage:		http://sarasvati.googlecode.com/
Category:		Workflow
Synopsis:	    A graph-based workflow engine for Haskell
Build-Type:     Simple
Copyright:      2008 Paul Lorenz
Data-Files:     README,
                common/GPLv3.license,
                common/db/create-schema.sql
                lang/guard.y
Extra-Source-Files: src/Workflow/Loaders/WfLoad.hs
                    src/Workflow/Util/DbUtil.hs,
                    src/Workflow/Util/ListUtil.hs,
                    src/Workflow/Util/TokenUtil.hs,
                    src/Workflow/GuardLang.hs


Library
  Build-Depends:	base,
                    containers,
                    HDBC >= 1.1.4,
                    HDBC-postgresql >=1.1.4.1
  Exposed-modules:
    Workflow.Loaders.DatabaseToEngineLoader,
    Workflow.DatabaseWfEngine,
    Workflow.Engine,
    Workflow.MemoryWfEngine

  Hs-Source-Dirs: src
  Extensions:     DeriveDataTypeable, ExistentialQuantification, Rank2Types
