Name:			Sarasvati
Version:		0.1.0
Cabal-Version:  >= 1.2
License:		LGPL
License-File:	common/LGPLv3.license
Author:			Paul Lorenz
Homepage:		http://sarasvati.googlecode.com/
Category:		Workflow
Synopsis:	    A graph-based workflow engine for Haskell
Build-Type:     Simple
Copyright:      2008 Paul Lorenz
Data-Files:     README,
                common/GPLv3.license,
                common/db/create-schema.sql
                lang/guard.y
Extra-Source-Files: src/Workflow/Sarasvati/DbUtil.hs,
                    src/Workflow/Sarasvati/GuardLang.hs,
                    src/Workflow/Sarasvati/ListUtil.hs,
                    src/Workflow/Sarasvati/TokenUtil.hs,
                    src/Workflow/Sarasvati/XmlUtil.hs


Library
  Build-Depends:	base,
                    containers,
                    HaXml >= 1.13,
                    HDBC >= 1.1.4,
                    HDBC-postgresql >=1.1.4.1
  Exposed-modules:
    Workflow.Sarasvati.DatabaseLoader,
    Workflow.Sarasvati.DatabaseWfEngine,
    Workflow.Sarasvati.Engine,
    Workflow.Sarasvati.Error,
    Workflow.Sarasvati.Loader,
    Workflow.Sarasvati.MemoryLoader,
    Workflow.Sarasvati.MemoryWfEngine

  Hs-Source-Dirs: src
  Extensions:     DeriveDataTypeable, ExistentialQuantification, Rank2Types
